guestbook/quarkus-native-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-native-demo
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: quarkus-native-demo
