guestbook/quarkus-native-demo-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus-native
  namespace: sandbox
  labels:
    app.kubernetes.io/instance: guestbook
spec:
  host: quarkus-native-sandbox.apps-crc.testing
  to:
    kind: Service
    name: quarkus-native-demo
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
